# paroculus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  result
cmake/: embed_font.cmake
docs/: FORMAT.md  PLANS.md  PRINCIPLES.md  REVIEW.md  UI_PLANS.md  UI_SPEC.md
src/: main.cpp  sketch.cpp  sketch.h  sketchview.cpp  sketchview.h
src/app/: main.cpp  scriptplay.cpp  scriptplay.h  selftest.cpp  selftest.h
src/core/: bake.cpp  bake.h  composition.cpp  composition.h  compound.cpp  compound.h  copy.cpp  copy.h  direction.cpp  direction.h  document.cpp  document.h  expression.cpp  expression.h  geom.h  glyphs.cpp  glyphs.h  ids.h  measure.cpp  measure.h  parameters.cpp  parameters.h  persist.cpp  persist.h  pose.cpp  pose.h  records.cpp  records.h  slots.cpp  slots.h  solution.cpp  solution.h  svg.cpp  svg.h  table.h  tags.cpp  tags.h  taxonomy.cpp  taxonomy.h  topology.cpp  (+9 more)
src/interact/: drag.cpp  drag.h  events.cpp  events.h  glyphs.cpp  glyphs.h  hit.cpp  hit.h  impose.cpp  impose.h  loops.cpp  loops.h  numeric.cpp  numeric.h  placement.h  policies.cpp  policies.h  registry.cpp  registry.h  script.cpp  script.h  selection.cpp  selection.h  session.cpp  session.h  snap.cpp  snap.h  surface.cpp  surface.h  tools.cpp  tools.h
src/render/: typeface.h  view.cpp  view.h
src/shell/: settings.cpp  settings.h  sidecar.cpp  sidecar.h  sketchview.cpp  sketchview.h  theme.cpp  theme.h  workspace.cpp  workspace.h  workspaces.cpp  workspaces.h
src/shell/models/: reports.cpp  reports.h
src/shell/qml/: ColorField.qml  ColorPicker.qml  CommandPalette.qml  ExportDialog.qml  LeftDock.qml  Main.qml  Panel.qml  ProjectedMenu.qml  RightDock.qml  SlotField.qml  StatusBarView.qml  StripView.qml  StyleBar.qml  StyleSection.qml  SwatchRow.qml  Toast.qml  ValueSlider.qml
src/solve/: arena.cpp  arena.h  context.cpp  context.h  demosketch.cpp  demosketch.h  diagnose.cpp  diagnose.h  scheduler.cpp  scheduler.h  solve.cpp  solve.h  spsc.h
tests/: main.cpp
tests/bench/: baseline.txt  main.cpp
tests/boundary/: canary_interact_qt.cpp  canary_render_consumer.cpp  canary_skia.cpp  canary_slvs.cpp  canary_solve_consumer.cpp
tests/corpus/: document.paro  flagship.paro  future.paro
tests/gestures/: async.cpp  composition.cpp  corpus.cpp  flagship.cpp  inference.cpp  structure.cpp  vocabulary.cpp
tests/raster/: composition.cpp  dimensions.cpp  regions.cpp
tests/semantics/: applicability.cpp  branches.cpp  catalogue.cpp  structure.cpp  vocabulary.cpp
tests/shell/: panels.cpp  reports.cpp  sidecar.cpp  translation.cpp  workspace.cpp
tests/support/: build.cpp  build.h
tests/unit/: core_composition.cpp  core_direction.cpp  core_document.cpp  core_expression.cpp  core_geom.cpp  core_ids.cpp  core_parameters.cpp  core_persist.cpp  core_pose.cpp  core_slots.cpp  core_solution.cpp  core_svg.cpp  core_table.cpp  core_taxonomy.cpp  core_topology.cpp  core_undo.cpp  core_units.cpp  interact_composition.cpp  interact_events.cpp  interact_glyphs.cpp  interact_hit.cpp  interact_impose.cpp  interact_loops.cpp  interact_numeric.cpp  interact_regions.cpp  interact_registry.cpp  interact_script.cpp  interact_selection.cpp  interact_shapes.cpp  interact_snap.cpp  interact_tools.cpp  render_view.cpp  solve_context.cpp  solve_demosketch.cpp  solve_scheduler.cpp
